--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               >
                 <i class="fa fa-bars"></i>
               </button>
-              <a class="navbar-brand" href="index.html">mr. portfolio</a>
+              <a class="navbar-brand" href="index.html">Rohit Saxen</a>
             </div>
 
             <!-- End Header Navigation -->
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="header-text">
-              <h2>hi <span>,</span> i'm mr. portfolio <span>.</span></h2>
+              <h2>hi <span>,</span> i'm rohit saxena<span>.</span></h2>
               <p>Data scientist and Analyst</p>
               <a href="assets/download/Rohit-Resume.pdf" download
                 >download resume</a
@@ -713,7 +713,7 @@
         <div class="hm-footer-copyright text-center">
           <p>
             &copy; copyright portfolio. design and developed by
-            <a href="https://www.themesine.com/">professor</a>
+            <a href="https://www.themesine.com/">S.R.</a>
           </p>
           <!--/p-->
         </div>
