--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               >
                 <i class="fa fa-bars"></i>
               </button>
-              <a class="navbar-brand" href="index.html">Rohit Saxen</a>
+              <a class="navbar-brand" href="index.html">Rohit Saxena</a>
             </div>
 
             <!-- End Header Navigation -->
@@ -120,7 +120,7 @@
             <div class="col-sm-6">
               <div class="single-about-txt">
                 <h3>
-                  As a passionate and dedicated BCA student with a strong
+                  A passionate and dedicated BCA student with a strong
                   foundation in Python and data science.
                 </h3>
                 <p>
