--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               >
                 <i class="fa fa-bars"></i>
               </button>
-              <a class="navbar-brand" href="index.html">Rohit Saxena</a>
+              <a class="navbar-brand" href="index.html">DataWithProfeessor</a>
             </div>
 
             <!-- End Header Navigation -->
