--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               >
                 <i class="fa fa-bars"></i>
               </button>
-              <a class="navbar-brand" href="index.html">DataWithProfeessor</a>
+              <a class="navbar-brand" href="index.html">Data With Profeessor</a>
             </div>
 
             <!-- End Header Navigation -->
@@ -667,7 +667,7 @@
                     </div>
                     <div class="single-contact-add-info">
                       <h3>website</h3>
-                      <p>www.mrportfolio.com</p>
+                      <p>www.datawithprofessor.com</p>
                     </div>
                   </div>
                 </div>
